--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^11.0.8",
     "lucide-react": "^0.344.0",
